--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-tensorflow==2.11.0
-tensorflow-datasets==4.8.2
-tensorflow-estimator==2.12.0
-tensorflow-gcs-config==2.12.0
-tensorflow-hub==0.13.0
-tensorflow-io-gcs-filesystem==0.32.0
-tensorflow-metadata==1.13.1
-tensorflow-probability==0.19.0
-keras==2.12.0
-keras-vis==0.4.1
-sklearn-pandas==2.2.0
-Flask==2.2.4
-pandas==1.5.3
-pandas-datareader==0.10.0
-pandas-gbq==0.17.9
-numpy==1.22.4
+tensorflow
+tensorflow-datasets
+tensorflow-estimator
+tensorflow-gcs-config
+tensorflow-hub
+tensorflow-io-gcs-filesystem
+tensorflow-metadata
+tensorflow-probability
+keras
+keras-vis
+sklearn-pandas
+Flask
+pandas
+pandas-datareader
+pandas-gbq
+numpy
